Prevent card content from overflowing container on small screen sizes.

--- a/cfgov/unprocessed/css/organisms/card-group.less
+++ b/cfgov/unprocessed/css/organisms/card-group.less
@@ -18,6 +18,9 @@
 
             & .m-card {
                 margin-bottom: unit( @grid_gutter-width / @base-font-size-px, em );
+                // Overrides flex-basis:1 to prevent card content from overflowing container
+                // when flex-direction is set to column at small screen sizes
+                flex-basis: auto;
             }
         } );
     }
